Update 'chbot241' component image to: quay.io/jrichter/chbot:d3295166c3b2cd2b8605d5e065777437db054056@sha256:97904a78e1c95005705a58268406fa132d14f93a3d27b8a64959c479af60904a

--- a/components/chbot241/overlays/development/deployment-patch.yaml
+++ b/components/chbot241/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: chbot241
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/jrichter/chbot:d3295166c3b2cd2b8605d5e065777437db054056@sha256:97904a78e1c95005705a58268406fa132d14f93a3d27b8a64959c479af60904a # use pre-built to bootstrap 
+          name: app-inference
